--- a/Microphysics/networks/general_null/network.template
+++ b/Microphysics/networks/general_null/network.template
@@ -35,7 +35,7 @@ module actual_network
   integer, parameter :: num_rate_groups = 1
 
 #ifdef CUDA
-  attributes(managed) :: aion, zion
+  attributes(pinned) :: aion, zion
 #endif
 
 contains
